# laimiu

./: .gitignore  memory.md  pyproject.toml
laimiu/: __init__.py  __main__.py  bootstrap.py  constants.py
laimiu/adaptation/: adapter_manager.py  dataset_builder.py  engine.py  trainer.py
laimiu/cli/: app.py  renderer.py  setup.py
laimiu/config/: settings.py
laimiu/core/: agent.py  agents.py  context.py  message_bus.py  messages.py  prompt.py  reflection.py  tool_executor.py
laimiu/dream/: consolidate.py  engine.py  extract.py  gather.py  orient.py  prune.py
laimiu/memory/: detail.py  index.py  manager.py  retriever.py  transcript.py  vector_store.py
laimiu/procedural/: engine.py  extractor.py  tool_writer.py  tracker.py  validator.py
laimiu/providers/: base.py  openai_compat.py  router.py
laimiu/safety/: guardian.py
laimiu/tools/: base.py  registry.py
laimiu/tools/builtin/: code.py  files.py  memory.py  shell.py  web.py
laimiu/utils/: io.py  logging.py  safety.py
