[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laimiu"
version = "0.2.0"
description = "Laimiu - Self-Evolving AI Agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "chromadb>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
laimiu = "laimiu.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["laimiu*"]
